# exception-ops

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_phase4_baseline.py  0002_phase5_schema_alignment.py  0003_phase7_evidence_records.py  0004_v2_phase1_ai_routing_metadata.py
docs/: approval-policy.md  architecture.md  exception-taxonomy.md  operations.md  phase-roadmap.md  security-controls.md  testing.md  threat-model.md
fixtures/: v1_cases.json
scripts/: replay_fixture.py
src/exception_ops/: __init__.py  config.py  evidence_adapters.py  execution_adapters.py  replay.py  temporal.py  worker.py
src/exception_ops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/exception_ops/activities/: approval.py  classification.py  evidence.py  execution.py  remediation.py
src/exception_ops/ai/: __init__.py  providers.py  routing.py  schemas.py  service.py
src/exception_ops/api/: app.py  exception_cases.py  forms.py  operator_ui.py
src/exception_ops/auth/: __init__.py  csrf.py  models.py  security.py  sessions.py
src/exception_ops/db/: __init__.py  models.py  (+1 more)
tests/: conftest.py  test_ai_activities.py  test_ai_routing.py  test_ai_service.py  test_approval_policy.py  test_approval_workflow.py  test_auth.py  test_evidence_activity.py  test_evidence_adapters.py  test_exceptions_api.py  test_execution_activity.py  test_execution_policy.py  test_health.py  test_migrations.py  test_operator_ui.py  test_regression_fixtures.py  test_replay.py
(+9 files in other folders)
