[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exception-ops"
version = "0.1.0"
description = "AI-assisted exception-resolution platform with durable workflows and bounded LLM assistance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic",
  "fastapi",
  "uvicorn",
  "pydantic",
  "sqlalchemy",
  "psycopg[binary]",
  "temporalio",
  "httpx",
  "openai",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]
